<resources>
    <string name="app_name">Kind Weather</string>

    <string name="notification_channel_location">Location status</string>
    <string name="notification_channel_weather">Weather alerts</string>

    <string name="notification_weather_tap">Tap for more information</string>

    <string name="notification_location_permission_title">Location permissions required!</string>
    <string name="notification_location_permission_text">Please allow background location permissions to display weather notifications</string>
    <string name="notification_alert_foreground">Fetching weather for current location…</string>

    <string name="onboarding_1_title">Kind Weather</string>
    <string name="onboarding_1_desc">Welcome! Kind Weather sends you reminders every morning to help you prepare for the day’s weather ahead.</string>
    <string name="onboarding_2_title">Explore the conditions</string>
    <string name="onboarding_2_desc">Whether you need to bring an umbrella with you, or it’s a t-shirt kind of day, we’ve got you sorted.</string>
    <string name="onboarding_3_title">Customise to your heart’s content</string>
    <string name="onboarding_3_desc">You can turn off any conditions you aren’t too bothered by, or even play around with the parameters to get the perfect reminders just for you.</string>

    <string name="allow_location_title">Allow location permissions</string>
    <string name="allow_location_desc">To get started, please allow location permissions so we can figure out the forecast for your current location.</string>
    <string name="allow_location_allow">Allow</string>
    <string name="allow_location_permission_error">Please allow location permissions to continue</string>
    <string name="allow_location_dialog_title">Location permissions required</string>
    <string name="allow_location_dialog_text">Kind Weather requires access to your location in the background to provide you with the most accurate weather reminders.\n\nPlease select \"%s\" on the following screen.</string>

    <string name="alert_list_allow_location_text">Notifications disabled! Please allow background location permissions.</string>
    <string name="alert_list_allow_location_button">Allow</string>

    <string name="home_feed">Feed</string>
    <string name="home_conditions">Conditions</string>
    <string name="home_settings">Settings</string>

    <string name="feed_empty">Hmm… looks like you have no items in your feed yet. There’ll be something tomorrow!</string>
    <string name="feed_empty_button">Set up some conditions</string>
    <string name="feed_entry_default">No notifications for today</string>

    <string name="forecast_high_temp">High</string>
    <string name="forecast_low_temp">Low</string>
    <string name="forecast_precip">Precip</string>
    <string name="forecast_location_not_found">Lat: %1$f\nLon: %2$f</string>

    <string name="alert_umbrella">Make sure to bring your brolly today</string>
    <string name="alert_umbrella_short">Bring your brolly today</string>
    <string name="alert_jacket">Layer up! It’s chilly today</string>
    <string name="alert_jacket_short">Layer up!</string>
    <string name="alert_tshirt">I see sun! It’s a tee and shorts day</string>
    <string name="alert_tshirt_short">It’s a tee and shorts day</string>
    <string name="alert_sunscreen">It’s hot! Slap on some sunscreen</string>
    <string name="alert_sunscreen_short">Slap on some sunscreen</string>
    <string name="alert_rain_jacket">Stormy skies ahead, bring a rain jacket</string>
    <string name="alert_rain_jacket_short">Bring a rain jacket</string>
    <string name="alert_thick_jacket">Brrrr! Wear your thickest jacket today</string>
    <string name="alert_thick_jacket_short">Wear your thickest jacket</string>

    <string name="forecast_type_temp_high">Temperature (high)</string>
    <string name="forecast_type_temp_low">Temperature (low)</string>
    <string name="forecast_type_precip_intensity">Precipitation</string>
    <string name="forecast_type_precip_probability">Chance of precipitation</string>
    <string name="forecast_type_humidity">Humidity</string>
    <string name="forecast_type_wind_gust">Wind gust speed</string>
    <string name="forecast_type_uv">UV index</string>

    <string name="alert_detail_enable">Enable notifications</string>
    <string name="alert_detail_params">Parameters</string>
    <string name="alert_detail_reset">Reset to default</string>

    <string name="settings_alert_time">Notification time</string>
    <string name="settings_units">Measurement units</string>
    <string name="settings_units_metric">Metric</string>
    <string name="settings_units_imperial">Imperial</string>
    <string name="settings_disclaimer">Powered by Dark Sky</string>

    <string-array name="units">
        <item>Metric</item>
        <item>Imperial</item>
    </string-array>
</resources>
