<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/white"
        android:elevation="4dp"
        app:title="@string/home_settings"
        app:titleTextAppearance="@style/ToolbarTitle"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.tragicfruit.kindweather.ui.components.SettingsListItemView
                android:id="@+id/alert_time_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/settings_alert_time"
                android:background="?attr/selectableItemBackground"/>

            <com.tragicfruit.kindweather.ui.components.SettingsListItemView
                android:id="@+id/units_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/settings_units"
                android:background="?attr/selectableItemBackground"/>

        </LinearLayout>

    </ScrollView>

    <TextView
        android:id="@+id/dark_sky_disclaimer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        android:paddingBottom="@dimen/app_margin_xxx"
        android:paddingTop="@dimen/app_margin_xxx"
        android:text="@string/settings_disclaimer"/>

</androidx.constraintlayout.widget.ConstraintLayout>