<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_back"
        android:background="@color/white"
        android:elevation="4dp"
        app:titleTextAppearance="@style/ToolbarTitle"/>

    <ImageView
        android:id="@+id/main_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        android:layout_marginTop="@dimen/app_margin_xxxx"/>

    <TextView
        android:id="@+id/address_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/main_image"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/app_margin_xx"
        android:layout_marginStart="@dimen/app_margin_xxxx"
        android:layout_marginEnd="@dimen/app_margin_xxxx"
        android:textSize="28sp"
        android:textColor="@color/text_black"/>

    <TextView
        android:id="@+id/high_temp_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/address_text"
        app:layout_constraintEnd_toStartOf="@id/low_temp_text"
        android:text="@string/forecast_high_temp"
        android:layout_marginTop="@dimen/app_margin_xxxx"
        android:paddingStart="@dimen/app_margin_xxxx"
        android:paddingEnd="@dimen/app_margin_xxxx"
        android:textColor="@color/text_grey"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/high_temp_value_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/high_temp_text"
        app:layout_constraintStart_toStartOf="@id/high_temp_text"
        app:layout_constraintEnd_toEndOf="@id/high_temp_text"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/app_margin"
        android:textColor="@color/text_grey"
        android:textSize="24sp"/>

    <TextView
        android:id="@+id/low_temp_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/address_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/forecast_low_temp"
        android:layout_marginTop="@dimen/app_margin_xxxx"
        android:paddingStart="@dimen/app_margin_xxxx"
        android:paddingEnd="@dimen/app_margin_xxxx"
        android:textColor="@color/text_grey"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/low_temp_value_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/low_temp_text"
        app:layout_constraintStart_toStartOf="@id/low_temp_text"
        app:layout_constraintEnd_toEndOf="@id/low_temp_text"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/app_margin"
        android:textColor="@color/text_grey"
        android:textSize="24sp"/>

    <TextView
        android:id="@+id/precip_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/address_text"
        app:layout_constraintStart_toEndOf="@id/low_temp_text"
        android:text="@string/forecast_precip"
        android:layout_marginTop="@dimen/app_margin_xxxx"
        android:paddingStart="@dimen/app_margin_xxxx"
        android:paddingEnd="@dimen/app_margin_xxxx"
        android:textColor="@color/text_grey"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/precip_value_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/precip_text"
        app:layout_constraintStart_toStartOf="@id/precip_text"
        app:layout_constraintEnd_toEndOf="@id/precip_text"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/app_margin"
        android:textColor="@color/text_grey"
        android:textSize="24sp"/>

</androidx.constraintlayout.widget.ConstraintLayout>